[package]
name = "sqlcipher-provider"
version = "0.1.0"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides SQLCipher."
homepage = "https://github.com/stainless-steel/sqlcipher-provider"
repository = "https://github.com/stainless-steel/sqlcipher-provider"
build = "build.rs"
links = "sqlcipher"

[build-dependencies]
pkg-config = "0.3"
