[package]
name = "sqlcipher-src"
version = "0.1.1"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides SQLCipher."
homepage = "https://github.com/stainless-steel/sqlcipher-src"
repository = "https://github.com/stainless-steel/sqlcipher-src"
build = "build.rs"
links = "sqlcipher"

[build-dependencies]
pkg-config = "0.3"
